spacing issue:

--- a/src/Pages/Mobile/Main/Main.css
+++ b/src/Pages/Mobile/Main/Main.css
@@ -54,12 +54,12 @@
 }
 
 #mobile-title-grid h3 {
-	font-size: 4vw;
+	font-size: 5vw;
 	margin-left: 8px;
 }
 
 #mobile-title-grid-h1 {
-	font-size: 5vw;
+	font-size: 6vw;
 	text-align: center;
 	margin-top: 0;
 	color: var(--accent-color);
